# RaylibEngine

./: .envrc  .gitignore  CMakeLists.txt  CMakeLists.txt.from_global_vcpkg  Makefile  README.md  note.txt  vcpkg.json
.cache/clangd/index/: main.cpp.AC6FF413713A8CA5.idx
docs/: raylib_setup.md  sdl2_vs_raylib.md  vcpkg_fundamentals.md  vcpkg_global_library_script.md  vcpkg_with_cmake_cli.md
legacy/: CMakeLists.txt  CMakeLists.txt02
src/: main.cpp
